Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22616

CHECK TABLE fails with wsrep_trx_fragment_size > 0

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.4.13, 10.5.3
    • 10.5.4, 10.4.14
    • Galera
    • None

    Description

      When having wsrep_trx_fragment_size set to a non-zero value on a Galera
      node, any CHECK TABLE command will fail with

      "Streaming replication not supported with binlog_format=STATEMENT"

      which looks pretty weird as with Galera binlog_format=ROW is enforced, and STATEMENT is not even possible.

      MariaDB [test]> check table t1;
      +---------+-------+----------+------------------------------------------------------------------+
      | Table   | Op    | Msg_type | Msg_text                                                         |
      +---------+-------+----------+------------------------------------------------------------------+
      | test.t1 | check | Error    | Streaming replication not supported with binlog_format=STATEMENT |
      | test.t1 | check | error    | Corrupt                                                          |
      +---------+-------+----------+------------------------------------------------------------------+
      

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              hholzgra Hartmut Holzgraefe
              Votes:
              2 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: