sql/sql_class.cc
@@ -5758,7 +5758,9 @@ int THD::decide_logging_format(TABLE_LIST *tables)
     binlog by filtering rules.
   */
 #ifdef WITH_WSREP
-  if (WSREP_CLIENT_NNULL(this) && wsrep_thd_is_local(this) &&
+  if (WSREP_CLIENT_NNULL(this) &&
+      wsrep_thd_is_local(this) &&
+      wsrep_is_active(this) &&
       variables.wsrep_trx_fragment_size > 0)
   {
     if (!is_current_stmt_binlog_format_row())
